--- a/ui/confirmation_dialog.glade
+++ b/ui/confirmation_dialog.glade
@@ -4,6 +4,7 @@
   <requires lib="gtk+" version="3.12"/>
   <object class="GtkDialog" id="confirmation_dialog">
     <property name="can_focus">False</property>
+    <property name="title" translatable="yes"> </property>
     <property name="type_hint">dialog</property>
     <child internal-child="vbox">
       <object class="GtkBox" id="dialog-vbox">
@@ -64,8 +65,8 @@
       </object>
     </child>
     <action-widgets>
-      <action-widget response="-5">ok_button</action-widget>
       <action-widget response="-4">cancel_button</action-widget>
+      <action-widget response="-5">ok_button</action-widget>
     </action-widgets>
   </object>
 </interface>
