--- a/ui/main.glade
+++ b/ui/main.glade
@@ -2,6 +2,51 @@
 <!-- Generated with glade 3.18.3 -->
 <interface>
   <requires lib="gtk+" version="3.12"/>
+  <object class="GtkAdjustment" id="duration_adjustment">
+    <property name="upper">60</property>
+    <property name="step_increment">1</property>
+    <property name="page_increment">10</property>
+  </object>
+  <object class="GtkAdjustment" id="fri_adjustment">
+    <property name="upper">24</property>
+    <property name="step_increment">1</property>
+    <property name="page_increment">10</property>
+  </object>
+  <object class="GtkAdjustment" id="mon_adjustment">
+    <property name="upper">24</property>
+    <property name="step_increment">1</property>
+    <property name="page_increment">10</property>
+  </object>
+  <object class="GtkAdjustment" id="pause_adjustment">
+    <property name="upper">60</property>
+    <property name="step_increment">1</property>
+    <property name="page_increment">10</property>
+  </object>
+  <object class="GtkAdjustment" id="sat_adjustment">
+    <property name="upper">24</property>
+    <property name="step_increment">1</property>
+    <property name="page_increment">10</property>
+  </object>
+  <object class="GtkAdjustment" id="sun_adjustment">
+    <property name="upper">24</property>
+    <property name="step_increment">1</property>
+    <property name="page_increment">10</property>
+  </object>
+  <object class="GtkAdjustment" id="thu_adjustment">
+    <property name="upper">24</property>
+    <property name="step_increment">1</property>
+    <property name="page_increment">10</property>
+  </object>
+  <object class="GtkAdjustment" id="tue_adjustment">
+    <property name="upper">24</property>
+    <property name="step_increment">1</property>
+    <property name="page_increment">10</property>
+  </object>
+  <object class="GtkAdjustment" id="wed_adjustment">
+    <property name="upper">24</property>
+    <property name="step_increment">1</property>
+    <property name="page_increment">10</property>
+  </object>
   <object class="GtkDialog" id="main_dialog">
     <property name="can_focus">False</property>
     <property name="title" translatable="yes">ChildTimeController</property>
@@ -162,7 +207,6 @@
                         <property name="receives_default">False</property>
                         <property name="halign">center</property>
                         <property name="xalign">0.5</property>
-                        <property name="active">True</property>
                         <property name="draw_indicator">True</property>
                       </object>
                       <packing>
@@ -178,6 +222,7 @@
                         <property name="width_chars">0</property>
                         <property name="max_width_chars">0</property>
                         <property name="orientation">vertical</property>
+                        <property name="adjustment">sun_adjustment</property>
                         <property name="numeric">True</property>
                       </object>
                       <packing>
@@ -205,7 +250,6 @@
                         <property name="receives_default">False</property>
                         <property name="halign">center</property>
                         <property name="xalign">0</property>
-                        <property name="active">True</property>
                         <property name="draw_indicator">True</property>
                       </object>
                       <packing>
@@ -219,6 +263,7 @@
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
                         <property name="orientation">vertical</property>
+                        <property name="adjustment">mon_adjustment</property>
                         <property name="numeric">True</property>
                       </object>
                       <packing>
@@ -246,7 +291,6 @@
                         <property name="receives_default">False</property>
                         <property name="halign">center</property>
                         <property name="xalign">0</property>
-                        <property name="active">True</property>
                         <property name="draw_indicator">True</property>
                       </object>
                       <packing>
@@ -260,6 +304,7 @@
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
                         <property name="orientation">vertical</property>
+                        <property name="adjustment">tue_adjustment</property>
                         <property name="numeric">True</property>
                       </object>
                       <packing>
@@ -287,7 +332,6 @@
                         <property name="receives_default">False</property>
                         <property name="halign">center</property>
                         <property name="xalign">0</property>
-                        <property name="active">True</property>
                         <property name="draw_indicator">True</property>
                       </object>
                       <packing>
@@ -301,6 +345,7 @@
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
                         <property name="orientation">vertical</property>
+                        <property name="adjustment">wed_adjustment</property>
                         <property name="numeric">True</property>
                       </object>
                       <packing>
@@ -328,7 +373,6 @@
                         <property name="receives_default">False</property>
                         <property name="halign">center</property>
                         <property name="xalign">0</property>
-                        <property name="active">True</property>
                         <property name="draw_indicator">True</property>
                       </object>
                       <packing>
@@ -342,6 +386,7 @@
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
                         <property name="orientation">vertical</property>
+                        <property name="adjustment">thu_adjustment</property>
                         <property name="numeric">True</property>
                       </object>
                       <packing>
@@ -369,7 +414,6 @@
                         <property name="receives_default">False</property>
                         <property name="halign">center</property>
                         <property name="xalign">0</property>
-                        <property name="active">True</property>
                         <property name="draw_indicator">True</property>
                       </object>
                       <packing>
@@ -383,6 +427,7 @@
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
                         <property name="orientation">vertical</property>
+                        <property name="adjustment">fri_adjustment</property>
                         <property name="numeric">True</property>
                       </object>
                       <packing>
@@ -410,7 +455,6 @@
                         <property name="receives_default">False</property>
                         <property name="halign">center</property>
                         <property name="xalign">0</property>
-                        <property name="active">True</property>
                         <property name="draw_indicator">True</property>
                       </object>
                       <packing>
@@ -425,6 +469,7 @@
                         <property name="can_focus">True</property>
                         <property name="input_purpose">digits</property>
                         <property name="orientation">vertical</property>
+                        <property name="adjustment">sat_adjustment</property>
                         <property name="numeric">True</property>
                       </object>
                       <packing>
@@ -505,7 +550,7 @@
                           <object class="GtkLabel" id="label2">
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
-                            <property name="label" translatable="yes">Session duration</property>
+                            <property name="label" translatable="yes">Sessions duration</property>
                             <property name="width_chars">15</property>
                           </object>
                           <packing>
@@ -519,6 +564,8 @@
                           <object class="GtkSpinButton" id="session_duration">
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
+                            <property name="adjustment">duration_adjustment</property>
+                            <property name="numeric">True</property>
                           </object>
                           <packing>
                             <property name="expand">False</property>
@@ -556,6 +603,8 @@ sessions</property>
                           <object class="GtkSpinButton" id="pause_between_sessions">
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
+                            <property name="adjustment">pause_adjustment</property>
+                            <property name="numeric">True</property>
                           </object>
                           <packing>
                             <property name="expand">False</property>
