--- a/usr/share/childtimecontroller/ui/main.glade
+++ b/usr/share/childtimecontroller/ui/main.glade
@@ -42,6 +42,12 @@
     <property name="step_increment">1</property>
     <property name="page_increment">10</property>
   </object>
+  <object class="GtkListStore" id="users_list_store">
+    <columns>
+      <!-- column-name name -->
+      <column type="gchararray"/>
+    </columns>
+  </object>
   <object class="GtkAdjustment" id="wed_adjustment">
     <property name="upper">24</property>
     <property name="step_increment">1</property>
@@ -139,7 +145,15 @@
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
                 <property name="halign">center</property>
+                <property name="model">users_list_store</property>
+                <property name="id_column">0</property>
                 <signal name="changed" handler="on_users_box_changed" swapped="no"/>
+                <child>
+                  <object class="GtkCellRendererText" id="name_cellrenderertext"/>
+                  <attributes>
+                    <attribute name="text">0</attribute>
+                  </attributes>
+                </child>
               </object>
               <packing>
                 <property name="expand">False</property>
