--- a/src/share/child-time-controller/app/ui/main_app_window.glade
+++ b/src/share/child-time-controller/app/ui/main_app_window.glade
@@ -41,12 +41,17 @@
   </object>
   <object class="GtkEntryCompletion" id="entrycompletion1"/>
   <object class="GtkAdjustment" id="fri_adjustment">
-    <property name="upper">24</property>
+    <property name="upper">1440</property>
     <property name="step_increment">1</property>
     <property name="page_increment">10</property>
   </object>
   <object class="GtkApplicationWindow" id="lock_window">
     <property name="can_focus">False</property>
+    <property name="modal">True</property>
+    <property name="destroy_with_parent">True</property>
+    <property name="skip_taskbar_hint">True</property>
+    <property name="skip_pager_hint">True</property>
+    <property name="decorated">False</property>
     <signal name="delete-event" handler="on_lock_exit" swapped="no"/>
     <child>
       <object class="GtkBox" id="main_lock_box">
@@ -112,7 +117,7 @@
     </child>
   </object>
   <object class="GtkAdjustment" id="mon_adjustment">
-    <property name="upper">24</property>
+    <property name="upper">1440</property>
     <property name="step_increment">1</property>
     <property name="page_increment">10</property>
   </object>
@@ -122,7 +127,7 @@
     <property name="page_increment">10</property>
   </object>
   <object class="GtkAdjustment" id="sat_adjustment">
-    <property name="upper">24</property>
+    <property name="upper">1440</property>
     <property name="step_increment">1</property>
     <property name="page_increment">10</property>
   </object>
@@ -161,17 +166,17 @@
     </child>
   </object>
   <object class="GtkAdjustment" id="sun_adjustment">
-    <property name="upper">24</property>
+    <property name="upper">1440</property>
     <property name="step_increment">1</property>
     <property name="page_increment">10</property>
   </object>
   <object class="GtkAdjustment" id="thu_adjustment">
-    <property name="upper">24</property>
+    <property name="upper">1440</property>
     <property name="step_increment">1</property>
     <property name="page_increment">10</property>
   </object>
   <object class="GtkAdjustment" id="tue_adjustment">
-    <property name="upper">24</property>
+    <property name="upper">1440</property>
     <property name="step_increment">1</property>
     <property name="page_increment">10</property>
   </object>
@@ -182,7 +187,7 @@
     </columns>
   </object>
   <object class="GtkAdjustment" id="wed_adjustment">
-    <property name="upper">24</property>
+    <property name="upper">1440</property>
     <property name="step_increment">1</property>
     <property name="page_increment">10</property>
   </object>
@@ -222,7 +227,20 @@
               <packing>
                 <property name="expand">False</property>
                 <property name="fill">True</property>
-                <property name="position">0</property>
+                <property name="position">1</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkSwitch" id="auto_start_switch">
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <signal name="state-set" handler="on_user_switch_state" swapped="no"/>
+              </object>
+              <packing>
+                <property name="expand">False</property>
+                <property name="fill">True</property>
+                <property name="pack_type">end</property>
+                <property name="position">2</property>
               </packing>
             </child>
             <child>
@@ -242,20 +260,7 @@
               <packing>
                 <property name="expand">False</property>
                 <property name="fill">True</property>
-                <property name="position">1</property>
-              </packing>
-            </child>
-            <child>
-              <object class="GtkSwitch" id="auto_start_switch">
-                <property name="visible">True</property>
-                <property name="can_focus">True</property>
-                <signal name="state-set" handler="on_user_switch_state" swapped="no"/>
-              </object>
-              <packing>
-                <property name="expand">False</property>
-                <property name="fill">True</property>
-                <property name="pack_type">end</property>
-                <property name="position">2</property>
+                <property name="position">3</property>
               </packing>
             </child>
           </object>
@@ -324,7 +329,13 @@
                       <object class="GtkSpinButton" id="mon_spin_button">
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
+                        <property name="width_chars">8</property>
+                        <property name="max_width_chars">8</property>
+                        <property name="xalign">1</property>
+                        <property name="primary_icon_name">appointment-soon</property>
                         <property name="adjustment">mon_adjustment</property>
+                        <property name="climb_rate">10</property>
+                        <property name="numeric">True</property>
                       </object>
                       <packing>
                         <property name="left_attach">1</property>
@@ -335,7 +346,10 @@
                       <object class="GtkSpinButton" id="tue_spin_button">
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
+                        <property name="xalign">1</property>
+                        <property name="primary_icon_name">appointment-soon</property>
                         <property name="adjustment">tue_adjustment</property>
+                        <property name="numeric">True</property>
                       </object>
                       <packing>
                         <property name="left_attach">1</property>
@@ -346,7 +360,10 @@
                       <object class="GtkSpinButton" id="wed_spin_button">
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
+                        <property name="xalign">1</property>
+                        <property name="primary_icon_name">appointment-soon</property>
                         <property name="adjustment">wed_adjustment</property>
+                        <property name="numeric">True</property>
                       </object>
                       <packing>
                         <property name="left_attach">1</property>
@@ -357,7 +374,10 @@
                       <object class="GtkSpinButton" id="thu_spin_button">
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
+                        <property name="xalign">1</property>
+                        <property name="primary_icon_name">appointment-soon</property>
                         <property name="adjustment">thu_adjustment</property>
+                        <property name="numeric">True</property>
                       </object>
                       <packing>
                         <property name="left_attach">1</property>
@@ -368,7 +388,10 @@
                       <object class="GtkSpinButton" id="fri_spin_button">
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
+                        <property name="xalign">1</property>
+                        <property name="primary_icon_name">appointment-soon</property>
                         <property name="adjustment">fri_adjustment</property>
+                        <property name="numeric">True</property>
                       </object>
                       <packing>
                         <property name="left_attach">1</property>
@@ -379,7 +402,10 @@
                       <object class="GtkSpinButton" id="sat_spin_button">
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
+                        <property name="xalign">1</property>
+                        <property name="primary_icon_name">appointment-soon</property>
                         <property name="adjustment">sat_adjustment</property>
+                        <property name="numeric">True</property>
                       </object>
                       <packing>
                         <property name="left_attach">1</property>
@@ -390,7 +416,10 @@
                       <object class="GtkSpinButton" id="sun_spin_button">
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
+                        <property name="xalign">1</property>
+                        <property name="primary_icon_name">appointment-soon</property>
                         <property name="adjustment">sun_adjustment</property>
+                        <property name="numeric">True</property>
                       </object>
                       <packing>
                         <property name="left_attach">1</property>
@@ -538,7 +567,12 @@
                       <object class="GtkSpinButton" id="duration_spin_button">
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
+                        <property name="width_chars">8</property>
+                        <property name="max_width_chars">8</property>
+                        <property name="xalign">1</property>
+                        <property name="primary_icon_name">appointment-soon</property>
                         <property name="adjustment">duration_adjustment</property>
+                        <property name="numeric">True</property>
                       </object>
                       <packing>
                         <property name="left_attach">1</property>
@@ -549,7 +583,10 @@
                       <object class="GtkSpinButton" id="pause_spin_button">
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
+                        <property name="xalign">1</property>
+                        <property name="primary_icon_name">appointment-soon</property>
                         <property name="adjustment">pause_adjustment</property>
+                        <property name="numeric">True</property>
                       </object>
                       <packing>
                         <property name="left_attach">1</property>
@@ -624,6 +661,7 @@
           </object>
           <packing>
             <property name="pack_type">end</property>
+            <property name="position">1</property>
           </packing>
         </child>
       </object>
