added level bar to the lock window

--- a/src/share/child-time-controller/app/ui/main_app_window.glade
+++ b/src/share/child-time-controller/app/ui/main_app_window.glade
@@ -93,6 +93,25 @@
           </packing>
         </child>
         <child>
+          <object class="GtkLevelBar" id="level_bar">
+            <property name="width_request">120</property>
+            <property name="visible">True</property>
+            <property name="can_focus">False</property>
+            <property name="halign">center</property>
+            <property name="margin_left">5</property>
+            <property name="margin_right">5</property>
+            <property name="margin_top">5</property>
+            <property name="margin_bottom">5</property>
+            <property name="value">1</property>
+            <property name="inverted">True</property>
+          </object>
+          <packing>
+            <property name="expand">False</property>
+            <property name="fill">True</property>
+            <property name="position">2</property>
+          </packing>
+        </child>
+        <child>
           <object class="GtkButton" id="lock_exit_button">
             <property name="label">gtk-quit</property>
             <property name="width_request">150</property>
@@ -110,7 +129,7 @@
           <packing>
             <property name="expand">False</property>
             <property name="fill">True</property>
-            <property name="position">2</property>
+            <property name="position">3</property>
           </packing>
         </child>
       </object>
